<?xml version="1.0"?>
<package format="2">
  <name>socketstream_node</name>
  <version>1.0.0</version>
  <description>Tan example on how to use the socketStream server to publish the incoming data to a ros topic</description>

  <maintainer email="iasonbatz@gmail.com">Iason Batzianoulis</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
